Fixed case narrative wrapping issue.

--- a/source-code/scratch/owin/owin/psk/app/styles/mmria.css
+++ b/source-code/scratch/owin/owin/psk/app/styles/mmria.css
@@ -76,7 +76,7 @@ padding-right: 15px;
 .box {
 	word-wrap: break-word;
   margin: 0 auto;
-  width: 1100px; 
+  width: 1101px; 
   height: 400px;
   padding: 70px;
   line-height: 300%;
